[tool.poetry]
name = "somepytools"
version = "1.0.0"
description = "Just some useful Python tools"
authors = ["Vladilav Goncharenko <vladislav.goncharenko@phystech.edu>"]
maintainers = ["Vladislav Goncharenko <vladislav.goncharenko@phystech.edu>"]
readme = "README.md"
repository = "https://github.com/v-goncharenko/somepytools"
keywords = ["tools", "utilities", "python", "torch", "opencv"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8"

PyYAML = {version = "^6.0", optional = true}
toml = {version = "^0.10.2", optional = true}

numpy = {version = "^1.22.3", optional = true}
opencv-python-headless = {version = "^4.5.5", optional = true}
torch = {version = "^1.11.0", optional = true}

[tool.poetry.extras]
all = ["PyYAML", "toml", "numpy", "opencv-python-headless", "torch"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["somepytools"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
